<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
    <!-- Layout for the editor -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_Image" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imageToChange"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_insert_photo" />

                <Button
                    android:id="@+id/add_photo_text"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/add_photo" />
            </LinearLayout>
        </LinearLayout>

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />
                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:digits="0123456789."
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>

        <!-- Gender category -->
        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:visibility="visible">

                <!-- Gender drop-down spinner -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="" />

                <Button
                    android:id="@+id/button_minus"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="decrement"
                    android:text="@string/minus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="@dimen/textSize30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_plus"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin1dp"
                    android:layout_weight="1"
                    android:background="@color/editorColorPrimary"
                    android:onClick="increment"
                    android:text="@string/plus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="@dimen/textSize30sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Supplier -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/edit_supplier_number"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_number"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/button_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin1dp"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@color/colorBlueLight"
                    android:onClick="order"
                    android:text="@string/order_more"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>